--- a/serverless.yml
+++ b/serverless.yml
@@ -3,9 +3,9 @@ service: my-recipe # NOTE: Don't put the word "google" in here
 provider:
   name: google
   runtime: nodejs
-  project: my-project
+  project: my-project-6544-228108
   # the path to the credentials file needs to be absolute
-  credentials: ~/.gcloud/keyfile.json
+  credentials: ~/.gcloud/my-project-6544-228108-53faabf8e0ab.json
 
 plugins:
   - serverless-google-cloudfunctions
