--- a/functions/package.json
+++ b/functions/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "functions",
-  "description": "Cloud Functions for Firebase",
+  "name": "my-recipes functions",
+  "description": "My Recipes Cloud Functions for Firebase",
   "scripts": {
     "lint": "eslint .",
     "serve": "firebase serve --only functions",
@@ -11,16 +11,15 @@
   },
   "dependencies": {
     "firebase": "^5.7.3",
-    "firebase-admin": "~6.0.0",
+    "firebase-admin": "~6.5.0",
     "firebase-functions": "^2.1.0"
   },
   "devDependencies": {
-    "eslint": "^4.12.0",
-    "eslint-plugin-promise": "^3.6.0"
+    "eslint": "^5.12.0",
+    "eslint-plugin-promise": "^4.0.1"
   },
   "engines": {
     "node": "8"
   },
   "private": true
-
 }
