--- a/functions/.eslintrc.json
+++ b/functions/.eslintrc.json
@@ -1,7 +1,7 @@
 {
   "parserOptions": {
     // Required for certain syntax usages
-    "ecmaVersion": 6
+    "ecmaVersion": 9
   },
   "plugins": [
     "promise"
@@ -9,19 +9,19 @@
   "extends": "eslint:recommended",
   "rules": {
     // Removed rule "disallow the use of console" from recommended eslint rules
-    "no-console": "off",
+    "no-console": 1,
 
     // Removed rule "disallow multiple spaces in regular expressions" from recommended eslint rules
-    "no-regex-spaces": "off",
+    "no-regex-spaces": 2,
 
     // Removed rule "disallow the use of debugger" from recommended eslint rules
     "no-debugger": "off",
 
     // Removed rule "disallow unused variables" from recommended eslint rules
-    "no-unused-vars": "off",
+    "no-unused-vars": 2,
 
     // Removed rule "disallow mixed spaces and tabs for indentation" from recommended eslint rules
-    "no-mixed-spaces-and-tabs": "off",
+    "no-mixed-spaces-and-tabs": 2,
 
     // Removed rule "disallow the use of undeclared variables unless mentioned in /*global */ comments" from recommended eslint rules
     "no-undef": "off",
@@ -118,6 +118,18 @@
     "promise/catch-or-return": 2,
 
     // Warn against nested then() or catch() statements
-    "promise/no-nesting": 1
+    "promise/no-nesting": 1,
+
+    // disallow using an async function as a Promise executor
+    "no-async-promise-executor": 2,
+
+    // disallow async functions which have no await expression
+    "require-await": 2,
+    
+    // disallow unnecessary return await
+    "no-return-await": 2,
+
+    // disallow assignments that can lead to race conditions due to usage of await or yield
+    "require-atomic-updates": 2
   }
 }
