Fixing project name.

--- a/functions/package.json
+++ b/functions/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-recipes functions",
+  "name": "my-recipes-functions",
   "description": "My Recipes Cloud Functions for Firebase",
   "scripts": {
     "lint": "eslint .",
