--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy:dev": "firebase serve",
-    "deploy:prod": "firebase deploy"
+    "serve": "firebase serve",
+    "deploy:all": "firebase deploy",
+    "deploy:hosting": "firebase deploy --only hosting",
+    "deploy:functions": "firebase deploy --only functions"
   },
   "private": true,
   "dependencies": {
